loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:10: error: ')' expected but integer literal found.
for(y<-0 3){
         ^LoopStairs:14: error: illegal start of simple expression
	}
        ^