loopfor.LoopStairs.scala.code
while(!estFaceMur){
  avance()
}
while(estFaceMur){
	gauche()
	avance()
	droite()
	avance()
}
for(y<-0 3){
  avance()
}